[package]
name = "url-shortener-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
regex = "1.7.3"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rusqlite = "0.29.0"
ulid = "1.0.0"
