[package]
name = "url-shortener-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
regex = "1.7.3"
rocket = { version = "0.5.0-rc.2", features = ["json"] }

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = ["macros", "offline", "migrate"]

[dependencies.rocket_db_pools]
features = ["sqlx_sqlite"]

[dependencies.rocket_sync_db_pools]
features = ["diesel_sqlite_pool", "sqlite_pool"]
